--- a/res/layout/input.xml
+++ b/res/layout/input.xml
@@ -18,7 +18,7 @@
 */
 -->
 
-<com.example.android.softkeyboard.LatinKeyboardView
+<kuanyingchou.bopomo_android.BoKeyboardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/keyboard"
         android:layout_alignParentBottom="true"
