rename to wen-input; remove content of WenKeyboardView

--- a/res/layout/input.xml
+++ b/res/layout/input.xml
@@ -18,7 +18,7 @@
 */
 -->
 
-<kuanyingchou.bopomo_android.BoKeyboardView
+<org.wen_input.WenKeyboardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/keyboard"
         android:layout_alignParentBottom="true"
